2013-10-11  Carsten Haitzler (The Rasterman)

        * deprecate/remove all the eina_error setting (and getting)
        within efl no one uses it and it frankly it much more pain
        than it's worth. the api's are still there, and efl api's still
        fail as they did before.. they just don't ALSO set eina_error.
        
2013-10-11  Cedric Bail

	* Eina: add Eina_Spinlock API,
	use Eina_Spinlock in Eina_Log, replace Eina_Lock by Eina_Spinlock in Eina_Stringshare,
	Eina_Chained_Mempool.
	* Eet: replace Eina_Lock by Eina_Spinlock in Eet_Dictionnary.
	* Evas: replace Eina_Lock by Eina_Spinlock in Evas_ScaleCache, Evas_Async_Events and Image_Entry.
	* Ecore: use Eina_Spinlock for Ecore_Thread.

2013-10-10  Carsten Haitzler (The Rasterman)

        * Ecore-con: use dlopen/dlsym (eina_module) to load libcurl to
        save memory (private pages) when not yet used by the process

2013-10-10  Michael Bouchaud (yoz)

	* Emotion: add two events to trigger webcam plug and unplug

2013-10-04  ChunEon Park (Hermet)

	* Eina: fix eina_file_map_lines() to not drop of one character in the last line.

2013-10-02  Cedric Bail

	* Eina: add eina_swap16(), eina_swap32(), eina_swap64().

2013-10-02  Tom Hacohen

	* Evas textblock: Use correct font underline properties when drawing
	underlines.

2013-10-01  Vincent Torri

	* Evas: add JPEG 2000 support.

2013-09-25  Tom Hacohen

	* Evas font: Make the evas_font_path_* functions apply to fontconfig searches.

2013-09-25  Tom Hacohen

	* Evas font: Use our own fontconfig configuration so we don't get
	affected by changes made to the default fontconfig configuration.

2013-09-06  Christophe Sadoine

	* Eet: Added EET_DATA_DESCRIPTOR_ADD_SUB_NESTED().

2013-09-24  Jorge Zapata

	* Eina: add a substraction in rectangles and more helpers,
	add double_from/to and helper defines in f16p16.

2013-09-12  Jihoon Kim

	* ecore_imf: Fix memory leak in scim immodule

2013-09-06  Cedric Bail

	* Edje: Add border information to Image sets.
