@@ -428,6 +428,8 @@ Fixes:
      - Correctly set match flag of signal callbacks
      - Fix size calculation of flags of signal callbacks
      - Check for both Lua 5.1 and 5.2.
+     - Fixed memory leak in the edje map color transition.
+
     * Efreet:
      - Fix desktop command parsing of https.
     * Emotion:
